[package]
name = "ssbc"
version = "0.1.0"
authors = ["Magnus Larsen <golgothasTerror101@gmail.com>"]
edition = "2018"

[dependencies]
derive_more = "0.99.11"

[features]
# Matches the CSCI 335 SSBC's behavior by default (twos complement).
# Enabling this feature match the CSCI 261 SSBC's behavior.
signedmagnitude_sub = []
